--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,18 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-testng</artifactId>
+            <version>1.2.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-testng</artifactId>
+            <version>4.4.0</version>
+        </dependency>
+
 
     </dependencies>
 
